<?xml version="1.0"?>
<package format="2">
  <name>rtsp_camera_streamer</name>
  <version>1.0.0</version>
  <description>High-performance RTSP camera streamer with hardware acceleration for Jetson platforms</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>compressed_image_transport</depend>
  <depend>theora_image_transport</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <!-- ROS package -->
  </export>
</package>